<resources>
    <string name="basketball_score">New Application</string>
    <string name="btn3">3 POINTS</string>
    <string name="btn2">2 POINTS</string>
    <string name="btn1">1 POINTS</string>
    <string name="reset">RESET</string>
    <string name="input">INPUT YOUR NUMBER</string>
    <string name="hello">HELLO</string>
    <string name="dollar">DOLLAR</string>
    <string name="euro">EURO</string>
    <string name="won">WON</string>
</resources>
