<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="TeamA"
                android:textSize="30sp"/>



            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:text="0"
                android:textSize="60sp"
                tools:layout_editor_absoluteX="188dp"
                tools:layout_editor_absoluteY="69dp" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="192dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="@android:color/holo_orange_dark"
                android:onClick="btnAdd3"
                android:text="@string/btn3" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="192dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="@android:color/holo_orange_dark"
                android:onClick="btnAdd2"
                android:text="@string/btn2"
                tools:layout_editor_absoluteX="36dp"
                tools:layout_editor_absoluteY="229dp" />

            <Button
                android:id="@+id/btn1"
                android:layout_width="192dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="@android:color/holo_orange_dark"
                android:onClick="btnAdd1"
                android:text="@string/btn1" />


        </LinearLayout>

        <TextView
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="TeamB"
                android:textSize="30sp"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="159dp" />

            <TextView
                android:id="@+id/score2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:text="0"
                android:textSize="60sp"
                tools:layout_editor_absoluteX="188dp"
                tools:layout_editor_absoluteY="69dp" />

            <Button
                android:id="@+id/btn32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="@android:color/holo_orange_dark"
                android:onClick="btnAdd3"
                android:text="@string/btn3"
                tools:layout_editor_absoluteX="30dp"
                tools:layout_editor_absoluteY="157dp" />

            <Button
                android:id="@+id/btn22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="@android:color/holo_orange_dark"
                android:onClick="btnAdd2"
                android:text="@string/btn2"
                tools:layout_editor_absoluteX="36dp"
                tools:layout_editor_absoluteY="229dp" />

            <Button
                android:id="@+id/btn12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="@android:color/holo_orange_dark"
                android:onClick="btnAdd1"
                android:text="@string/btn1"
                tools:layout_editor_absoluteX="36dp"
                tools:layout_editor_absoluteY="297dp" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/reset"
        android:layout_width="178dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginTop="137dp"
        android:layout_marginEnd="105dp"
        android:layout_marginRight="105dp"
        android:layout_marginBottom="100dp"
        android:background="@android:color/holo_orange_dark"
        android:onClick="btnReset"
        android:text="@string/reset"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="367dp" />

</RelativeLayout>